# smallpad

./: CMakeLists.txt  README.md  about.ui  check.ui  integrate.ui  libamos.f  libamos.h  libdcl.cpp  libdcl.h  libeispack.cpp  libeispack.h  main.cpp  main.qrc  nativeeventfilter.cpp  nativeeventfilter.h  pad.cpp  pad.h  pad.ui  plot.ui  resource.rc  settings.ui  solve.ui
